<resources>
    <string name="app_name">DatabaseProject</string>

    <string name="LOGIN_STATUS">LOGIN</string>
    <string name="USERINFO">UserInfo</string>
    <string name="U_TYPE">U_TYPE</string>

    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Image_Link">Image Link</string>
    <string name="Log_Out">Log Out</string>
    <string name="Profile">Profile</string>
    <string name="Products">Products</string>
    <string name="Product_Name">Product Name</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="Price_c">Price:\t\t</string>
    <string name="Submit">Submit</string>
    <string name="Add_Product">Add Product</string>
    <string name="Update_Quantity">Update Quantity</string>
    <string name="My_Products">My Products</string>
    <string name="Product">Product</string>
    <string name="Cart">Cart</string>
    <string name="Date_Added_c">Date Added: </string>
    <string name="Category_c">Category: </string>
    <string name="Quantity_c">Quantity: </string>
    <string name="Add_To_Cart">Add to Cart</string>
    <string name="Checkout">Checkout</string>

    <string name="email">Email Address</string>
    <string name="Password">Password</string>

    <string name="NetworkError">Network Connection Error</string>

    <string name="Username_s">Username*</string>
    <string name="Password_s">Password*</string>
    <string name="Verify_Password_s">Verify Password*</string>
    <string name="Name_s">Name*</string>
    <string name="First_Name_s">First Name*</string>
    <string name="Last_Name_s">Last Name*</string>
    <string name="Location_s">Location*</string>
    <string name="Email_s">Email*</string>
    <string name="Phone_s">Phone*</string>
    <string name="Street_Address_s">Street Address*</string>
    <string name="City_s">City*</string>
    <string name="State_s">State*</string>
    <string name="Zipcode_s">Zipcode*</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="Name_c">Name:\t\t</string>
    <string name="Email_c">Email:\t\t</string>
    <string name="Phone_c">Phone:\t\t</string>
    <string name="Address_c">Address:\t\t</string>

    <string name="Seller">Seller</string>

</resources>
