<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context="databaseproject.app.SellerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:text="@string/Add_Product"
        android:textSize="24sp"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/title"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/productName"
                android:hint="@string/Product_Name"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/description"
                android:layout_below="@+id/productName"
                android:hint="@string/Description"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/price"
                android:layout_below="@+id/description"
                android:hint="@string/Price"
                android:inputType="numberDecimal"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/category"
                android:layout_below="@+id/price"
                android:hint="@string/Category_c"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/category"
                android:id="@+id/image"
                android:layout_marginTop="20dp"
                android:src="@drawable/product_chair"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/quantity"
                android:layout_below="@+id/image"
                android:hint="@string/Quantity_c"
                android:inputType="numberSigned"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/quantity"
                android:text="@string/Submit"
                android:layout_marginTop="10dp"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>